# Page-Insights

./: .gitignore  LICENSE.txt  README.md  app.py  dist.env  pyproject.toml  requirements.txt
assets/prompts/: default-prompt.txt
assets/research/: Forest_care-6F5h.md  research_digest.json
page_insights/: llm_adapter.py  prompts_manager.py  research_manager.py  summarizer.py  webpage.py  webpage_reader.py
